--- a/build.gradle
+++ b/build.gradle
@@ -44,15 +44,9 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
+}
 
-    systemProperty "chromeoptions.prefs", "intl.accept_languages=ru"
-
+test {
     useJUnitPlatform()
-
-    testLogging {
-        lifecycle {
-            events "started", "skipped", "failed", "standard_error", "standard_out"
-            exceptionFormat "short"
-        }
-    }
 }
